# Cafetria-RecomendationEngine

./: generate_report.cpp  recomandationEngine.cpp  sentimentAnalyzer.cpp  sentiment_words.txt
Application/: CMakeLists.txt  client.out  sentiment_words.txt  server.out
Application/Client/gtest/: MockClientSocket.h  gtest_User.cpp  main.cpp
Application/Client/inc/: Admin.h  Chef.h  ClientSocket.h  Employee.h  User.h  Utils.h
Application/Client/src/: Admin.cpp  Chef.cpp  ClientSocket.cpp  Employee.cpp  User.cpp  Utils.cpp  main.cpp
Application/Common/: RequestType.h  ResponseType.h  SocketProtocol.h
Application/Common/DTO/inc/: FeedbackDTO.h  RolloutMenuDTO.h  UserDTO.h
Application/Common/DTO/src/: FeedbackDTO.cpp  MenuDTO.cpp  NotificationDTO.cpp  RolloutMenuDTO.cpp  UserDTO.cpp  VoteDTO.cpp
Application/DTO/inc/: MenuDTO.h  NotificationDTO.h  UserDTO.h  VoteDTO.h
Application/DTO/src/: FeedbackDTO.cpp  MenuDTO.cpp  NotificationDTO.cpp  RolloutMenuDTO.cpp  UserDTO.cpp  VoteDTO.cpp
Application/Server/inc/: ClientRequestManager.h  RecommendationDTO.h  RecommendationEngine.h  SentimentAnalyzer.h  ServerManager.h  ServerSocket.h
Application/Server/inc/DB Managers/: FeedbackDBManager.h  MenuDBManager.h  NotificationDBManager.h  RolloutDBManager.h  UserDBManager.h
Application/Server/inc/DBManager/: DatabaseManager.h  FeedbackDBManager.h  MenuDBManager.h  NotificationDBManager.h  RolloutDBManager.h  UserDBManager.h  VoteDBManager.h
Application/Server/src/: ClientRequestManager.cpp  RecommendationEngine.cpp  SentimentAnalyzer.cpp  ServerManager.cpp  ServerSocket.cpp  a.out  main.cpp
Application/Server/src/DB Manager/: DatabaseManager.cpp  FeedbackDBManager.cpp  MenuDBManager.cpp  NotificationDBManager.cpp  RolloutDBManager.cpp  UserDBManager.cpp
Application/Server/src/DBManager/: DatabaseManager.cpp  FeedbackDBManager.cpp  MenuDBManager.cpp  NotificationDBManager.cpp  RolloutDBManager.cpp  UserDBManager.cpp  VoteDBManager.cpp
Database/: cafeteria.sql
Diagrams/: class
Utilitities/: generate_report.cpp
